fixed overflowing numbers and also result display

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   width: 95%;
   height: 20%;
   border-radius: 15px;
+  overflow: hidden;
 }
 
 .display-text {
